# rust-playground

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  index.html  iris.html  xor.html
.devcontainer/: devcontainer.json
.github/: copilot-instructions
.github/workflows/: README.md  ci.yml  (+2 more)
back/: .dockerignore  Cargo.toml  Dockerfile  readme.md  wip.md
back/src/: authentication.rs  main.rs  protected_routes.rs  shared.rs  static_files.rs
back/www/: index.html
docker-back/: Cargo.toml
next/: artifact.tar  index.html  iris.html  test.html  xor.html
test-neural/: BUILDER_PATTERN.md  CHANGELOG_BUILDER.md  Cargo.toml  INFRASTRUCTURE_SETUP.md  METRICS_GUIDE.md  README.md  SETUP_SUMMARY.txt  TODO.md  adjust-paths.sh  best_xor_model.json  consigne.md  readme.md  readme_old.md  remarks.md  todo.md  xor_model.json
test-neural/ai-web-app/: .gitignore  CODE_REVIEW.md  README.md  angular.json  package-lock.json  package.json  tsconfig.json
test-neural/ai-web-app/pkg/iris_wasm/: neural_wasm_iris_bg.wasm
test-neural/ai-web-app/pkg/mnist_wasm/: neural_wasm_mnist.js  package.json
test-neural/ai-web-app/pkg/xor_wasm/: README.md  neural_wasm.d.ts  neural_wasm_bg.wasm  neural_wasm_bg.wasm.d.ts  neural_wasm_xor.d.ts  neural_wasm_xor_bg.wasm
test-neural/ai-web-app/public/wasm/iris_wasm/: neural_wasm_iris.d.ts  neural_wasm_iris.js  neural_wasm_iris_bg.wasm  neural_wasm_iris_bg.wasm.d.ts
test-neural/ai-web-app/public/wasm/mnist_wasm/: neural_wasm_mnist.d.ts  neural_wasm_mnist_bg.wasm.d.ts
test-neural/ai-web-app/public/wasm/pkg/iris_wasm/: neural_wasm_iris_bg.wasm  package.json
test-neural/ai-web-app/public/wasm/pkg/xor_wasm/: neural_wasm.js  neural_wasm_bg.wasm
test-neural/ai-web-app/public/wasm/xor_wasm/: neural_wasm_xor.js  neural_wasm_xor_bg.wasm  neural_wasm_xor_bg.wasm.d.ts  package.json
test-neural/ai-web-app/src/: index.html  styles.scss
test-neural/ai-web-app/src/app/: app.config.ts  app.routes.ts  app.spec.ts  app.ts
test-neural/ai-web-app/src/app/pages/: model.ts
test-neural/ai-web-app/src/app/pages/home/: home.html  home.ts  routes.ts
test-neural/ai-web-app/src/app/pages/iris-classifier/: iris-classifier.html  iris-classifier.scss  iris-classifier.ts  routes.ts
test-neural/ai-web-app/src/app/pages/mnist-digit/: index.ts  mnist-digit.html  mnist-digit.ts  routes.ts
test-neural/ai-web-app/src/app/pages/xor-logic-gate/: routes.ts  xor-logic-gate.html  xor-logic-gate.scss  xor-logic-gate.ts
test-neural/ai-web-app/src/app/ui/about/: about.html  about.scss  about.ts
test-neural/ai-web-app/src/app/ui/card/: card.ts
test-neural/ai-web-app/src/app/ui/loader/: loader.html  loader.ts
test-neural/ai-web-app/src/app/ui/model-info/: model-info.html  model-info.scss  model-info.ts
test-neural/ai-web-app/src/app/ui/navigation-back/: navigation-back.html  navigation-back.ts
test-neural/ai-web-app/src/app/ui/network-visualization/: network-visualization.html  network-visualization.ts
test-neural/ai-web-app/src/app/ui/neural-network-model-vizualizer/: neural-network-model-vizualizer.html  neural-network-model-vizualizer.scss  neural-network-model-vizualizer.ts
test-neural/ai-web-app/src/app/ui/page-footer/: page-footer.html  page-footer.ts
test-neural/ai-web-app/src/app/ui/page-layout/: page-layout.html  page-layout.ts
test-neural/ai-web-app/src/app/ui/page-title/: page-title.html  page-title.ts
test-neural/ai-web-app/src/wasm/shared/: index.ts  iris-wasm.service.ts  model-info.ts  wasm.ts  wor-wasm.service.ts  xor-wasm.service.ts
test-neural/cma-neural-network/: Cargo.toml  README.md  TODO.md  retour.md
test-neural/cma-neural-network/src/: builder.rs  callbacks.rs  compute.rs  dataset.rs  io.rs  lib.rs  metrics.rs  network.rs  trainer.rs
test-neural/examples/: builder_showcase.rs  callbacks_demo.rs  getting_started.rs  metrics_demo.rs  minibatch_demo.rs  optimizer_comparison.rs  regularization_demo.rs  serialization.rs  xor_tests.rs
test-neural/examples/data/: best_model.json  getting_started.output.txt  xor_model.json
test-neural/neural-wasm/: .gitignore  API.md  Cargo.toml  README.md  TRAINING_IMPROVEMENTS.md  build.sh  build_all.sh
test-neural/neural-wasm/iris/: Cargo.toml  README.md  build.sh
test-neural/neural-wasm/iris/src/: iris_model.json  lib.rs  train_iris.rs
test-neural/neural-wasm/mnist/: Cargo.toml  README.md  build.sh
test-neural/neural-wasm/mnist/src/: lib.rs  train_mnist.rs
test-neural/neural-wasm/shared/: Cargo.toml
test-neural/neural-wasm/shared/src/: lib.rs
test-neural/neural-wasm/src/: lib.rs  xor_model.json
test-neural/neural-wasm/xor/: Cargo.toml  build.sh
test-neural/neural-wasm/xor/src/: lib.rs  train_xor.rs  xor_model.json
test-neural/src/: builder.rs  callbacks.rs  dataset.rs  io.rs  lib.rs  main.rs  metrics.rs  network.rs  optimizer.rs
test-neural/www/: README.md  index.html  iris.html  test.html  xor.html
test-neural/www/data/: README.md
(+13 files in other folders)
