[package]
name = "back"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.9" # est ce réellement nécessaire ? vérifier la documentation
actix-session = { version = "0.11.0", features = ["redis-session"] }
actix-web = "4.12.1"
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.29"
serde = "1.0.228"
serde_json = "1.0.148"
