[package]
name = "cma-neural-network"
version = "0.1.0"
edition = "2024"
description = "A flexible feedforward neural network library in Rust"
license = "MIT"

[lib]
name = "cma_neural_network"
path = "src/lib.rs"

[dependencies]
ndarray = { version = "0.17.1", features = ["serde"] }
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
