[package]
name = "neural-wasm-iris"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "train_iris"
path = "src/train_iris.rs"

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Neural network library
cma-neural-network = { path = "../../cma-neural-network" }
neural-wasm-shared = { path = "../shared" }
ndarray = { version = "0.17.1", features = ["serde"] }

# Required for WASM random number generation
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "z"
lto = true
