[package]
name = "neural-wasm-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
chrono = "0.4"
cma-neural-network = { path = "../../cma-neural-network" }
ndarray = { version = "0.17.1", features = ["serde"] }
